ajustes para reutilizacao do código, e preparacao para utilizacao do php

--- a/site_DLima/cadastroProduto.html
+++ b/site_DLima/cadastroProduto.html
@@ -31,7 +31,7 @@
                             Consultas <i class="material-icons right">arrow_drop_down</i>
                         </a>
                     </li>
-                    <li><a href="#!">Sair</a></li>
+                    <li><a href="index.html">Sair</a></li>
                 </ul>
                 <!-- Dropdown Structure -->
                 <ul id="dropdown-menu" class="dropdown-content">
@@ -59,12 +59,12 @@
                   <div class="card amber lighten-3" style="border-radius: 20px;padding-bottom: 15px;">
                     <div class="card-content white-text form-produto-data">
                       <span class="card-title" style="color: #000 !important;">Cadastro de Produtos</span>
-                      <div class="row">
+                      <!-- <div class="row">
                         <div class="input-field col s6">
                           <input id="codigo" type="number" class="validate">
                           <label for="codigo">Código do Produto</label>
                         </div>
-                      </div>
+                      </div> -->
                       <div class="row">
                         <div class="input-field col s6">
                           <input id="descricao" type="text" class="validate">
