--- a/site_DLima/cadastroEntregador.html
+++ b/site_DLima/cadastroEntregador.html
@@ -33,7 +33,7 @@
                           Consultas <i class="material-icons right">arrow_drop_down</i>
                       </a>
                   </li>
-                  <li><a href="#!">Sair</a></li>
+                  <li><a href="index.html">Sair</a></li>
               </ul>
               <!-- Dropdown Structure -->
               <ul id="dropdown-menu" class="dropdown-content">
