--- a/site_DLima/cadastroFiliais.html
+++ b/site_DLima/cadastroFiliais.html
@@ -33,7 +33,7 @@
                           Consultas <i class="material-icons right">arrow_drop_down</i>
                       </a>
                   </li>
-                  <li><a href="#!">Sair</a></li>
+                  <li><a href="index.html">Sair</a></li>
               </ul>
               <!-- Dropdown Structure -->
               <ul id="dropdown-menu" class="dropdown-content">
@@ -64,11 +64,11 @@
                         <div class="row">
                             <form class="col s12">
                                 <div class="row">
-                                    <div class="input-field col s6">
+                                    <!-- <div class="input-field col s6">
                                         <input placeholder="Cod. Filial" id="codFilial" type="number" class="validate">
                                         <label for="codFilial">Cod. Filial</label>
-                                    </div>
-                                    <div class="input-field col s6">
+                                    </div> -->
+                                    <div class="input-field col s12">
                                         <input placeholder="Gerente" id="gerente" type="text" class="validate">
                                         <label for="gerente">Gerente</label>
                                     </div>
