--- a/site_DLima/cadastroFornecedor.html
+++ b/site_DLima/cadastroFornecedor.html
@@ -33,7 +33,7 @@
                           Consultas <i class="material-icons right">arrow_drop_down</i>
                       </a>
                   </li>
-                  <li><a href="#!">Sair</a></li>
+                  <li><a href="index.html">Sair</a></li>
               </ul>
               <!-- Dropdown Structure -->
               <ul id="dropdown-menu" class="dropdown-content">
@@ -74,10 +74,10 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="input-field col s6">
+                                    <!-- <div class="input-field col s6">
                                         <input placeholder="Cod. Fornecedor" id="codFornec" type="text" class="validate">
                                         <label for="CodForne">Cod. Fornecedor</label>
-                                    </div>
+                                    </div> -->
                                     <div class="input-field col s6">
                                         <input placeholder="CNPJ" id="cnpj" type="text" class="validate">
                                         <label for="cnpj">CNPJ</label>
